feat(feature): changed names;

--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Aditya Car Zone - A modern React TypeScript application"
+      content="RC Travels - A modern React TypeScript application"
     />
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
-    <title>Aditya Car Zone</title>
+    <title>RC Travels</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
